refactor: 소나 수정